--- a/cmd/client/ui/html/time.html
+++ b/cmd/client/ui/html/time.html
@@ -10,7 +10,7 @@
         <div class="header">
             <div class="logo">
                   <div class="logo_text">
-                    <h1><a>distributed calculator</a></h1>
+                    <h1><a href="home.html">distributed calculator</a></h1>
                   </div>
               
               </div>
