--- a/cmd/client/ui/html/home.html
+++ b/cmd/client/ui/html/home.html
@@ -26,6 +26,6 @@
     </div>
 </body>
 <body>
-    <p><a class="nav-item2">Это домашняя страница калькулятора. Я не смог придумать что сюда написать</a></p>
+    <p><a>Это домашняя страница калькулятора. Я не смог придумать что сюда написать</a></p>
 </body>
 </html>
