--- a/cmd/client/ui/html/login.html
+++ b/cmd/client/ui/html/login.html
@@ -39,6 +39,9 @@
         <button id="2", name="login", value="2">login</button>
         <br/>
         <br/>
+        <button id="3", name="exit", value="1">exit</button>
+        <br/>
+        <br/>
     </form>
     <!-- <script>
         document.addEventListener("DOMContentLoaded", () => {
